HW13v3 increase divide speed for ArrayList