@@ -2,10 +2,7 @@ package com.massita;
 
 import org.junit.Assert;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Random;
+import java.util.*;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.IntStream;
 
@@ -15,7 +12,7 @@ public class MultyThreadSortTest {
 
     @org.junit.Test
     public void simpleOneThreadTest() {
-        List<Integer> input = List.of(3, 1, 2);
+        List<Integer> input = Arrays.asList(3, 2, 1);
         List<Integer> expectedResult = List.of(1, 2, 3);
 
         List<Integer> sorted = oneThreadSort(input);
@@ -36,7 +33,8 @@ public class MultyThreadSortTest {
 
     @org.junit.Test
     public void simpleMultiThreadTest() throws ExecutionException, InterruptedException {
-        List<Integer> input = List.of(3, 1, 2, 6, 7);
+        List<Integer> input = Arrays.asList(3, 1, 2, 6, 7);
+
         List<Integer> expectedResult = List.of(1, 2, 3, 6, 7);
 
         List<Integer> sorted = multiThreadSort(input);
@@ -49,20 +47,22 @@ public class MultyThreadSortTest {
         Random random = new Random();
 
         List<Integer> input = new ArrayList<>();
-        IntStream.rangeClosed(1, 5000000).map(el -> random.nextInt()).distinct().forEach(input::add);
+        IntStream.rangeClosed(1, 10000000).map(el -> random.nextInt()).distinct().forEach(input::add);
+
+        List<Integer> inputForAssert = new ArrayList<>(input);
 
         //Just Get rough time of multisort
         long start = System.currentTimeMillis();
         List<Integer> sorted = multiThreadSort(input);
         long finish = System.currentTimeMillis();
-        System.out.println(finish-start);
+        System.out.println("MultiThread time: " + (finish-start));
 
         //Just Get rough time of ordinary method
         start = System.currentTimeMillis();
-        input.sort(Comparator.naturalOrder());
+        inputForAssert.sort(Comparator.naturalOrder());
         finish = System.currentTimeMillis();
-        System.out.println(finish-start);
+        System.out.println("OneThread time: " + (finish-start));
 
-        Assert.assertEquals(input, sorted);
+        Assert.assertEquals(inputForAssert, sorted);
     }
 }
